# lab_docker

./: .appveyor.yml  .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md  REPORT.md
.github/workflows/: ci.yml  coveralls.yml  release.yml
banking/: CMakeLists.txt
tests/: test_account.cpp
